# glftest_a

./: CMakeLists.txt
include/: cell.h  coord.h  minefield.h  solver.h
src/: coord.cpp  main.cpp  minefield.cpp  solver.cpp
